--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,6 @@
 @import "materialize";
 @import "mixins";
+@import "customers";
 
 header{
   display: block;
@@ -24,9 +25,23 @@ main{
   font-weight: 200;
 }
 
+.promo{
+  text-align: center;
+}
+
+.promo i {
+  margin: 40px 0;
+  color: #ee6e73;
+  font-size: 7rem;
+  display: block;
+}
+
 nav{
   .brand-logo{
     padding-left: 40px;
+  }
+  .nav-wrapper{
+    @include page_centered();
   }
 }
 
